Added environment to the .gitignore and added addTask endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
+
+# Ignore environment.ts with Firebase keys
+src/app/environment/environment.ts
